syntax = "proto3";

package shipment_pricing;

service ShipmentPriceService {
rpc GetShipmentPrice  (GetShipmentPriceRequest) returns (GetShipmentPriceResponse);
rpc SetShipmentParams (SetShipmentParamsRequest) returns (SetShipmentParamsResponse);
rpc GetShipmentParams (GetShipmentParamsRequest) returns (GetShipmentParamsResponse);
}

message Location {
float lat = 1;
float lon = 2;
}

message Store {
string store_uuid = 1;
string delivery_zone_id = 2;
Location store_location = 3;
string store_type = 4;
}

message Shopper {
string shopper_uuid = 1;
string shopper_type = 2;
string shopper_role = 3;
Location start_location = 4;
}

message Sku {
string sku = 1;
float size = 2;
float size_unit = 3;
string price_type = 4;
}

message UserCart {
repeated Sku sku = 1;
float weight = 2;
float item_count = 3;
}

message Shipment {
string shipment_uuid = 1;
Store store_info = 2;
UserCart cart = 3;
Location delivery_location = 4;
}

message GetShipmentPriceRequest {
string workassign_id = 1;
Shopper assigned_shopper = 2;
Shipment shipment = 3;
string workassign_type = 4;
}

message GetShipmentPriceResponse {
string workassign_id = 1;
float base_cost = 2;
float bonus_cost = 3;
}

message SetShipmentParamsRequest {
    string id = 1;
    string partner_type = 2;
    float per_items = 3;
    float per_items_fast_bonus = 4;
    float per_distance = 5;
    float per_distance_fast_bonus = 6;
    float per_weight = 7;
    float per_user_review = 8;
    float lat = 9;
    float lon = 10;
    string store_type = 11;
    float fix_delivery = 12;
    float fix_assembly = 13;
    float time_per_position = 14;
    float time_to_client_late_max = 15;
    float per_first_mile = 16;
    float first_mile_threshold = 17;
    float items_threshold = 18;
    float weight_threshold = 19;
    float distance_threshold = 20;
    float fix_first_mile = 21;
}

message SetShipmentParamsResponse {
    string status = 1;
}

message GetShipmentParamsRequest {
    string id = 1;
    string partner_type = 2;
    string store_type = 3;
}

message GetShipmentParamsResponse {
    string id = 1;
    string partner_type = 2;
    float per_items = 3;
    float per_items_fast_bonus = 4;
    float per_distance = 5;
    float per_distance_fast_bonus = 6;
    float per_weight = 7;
    float per_user_review = 8;
    float lat = 9;
    float lon = 10;
    string store_type = 11;
    float fix_base = 12;
}
